Routes Api Terminées et fonctionnelle
Base de donnée se nomme SeekFriend et possède une seule collection :
users.
